--- a/backend-feed-deployment.yaml
+++ b/backend-feed-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         service: backend-feed
     spec:
       containers:
-        - image: karloslopez/udagram-api-feed
+        - image: karloslopez/udagram-api-feed:v2
           name: backend-feed
           imagePullPolicy: Always
           resources:
