--- a/backend-feed-deployment.yaml
+++ b/backend-feed-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         service: backend-feed
     spec:
       containers:
-        - image: karloslopez/udagram-api-feed:v2
+        - image: karloslopez/udagram-api-feed:v3
           name: backend-feed
           imagePullPolicy: Always
           resources:
@@ -48,8 +48,8 @@ spec:
                   key: UDC_AWS_REGION
             - name: UDC_JWT_SECRET
               valueFrom:
-                configMapKeyRef:
-                  name: env-configmap
+                secretKeyRef:
+                  name: env-secret
                   key: UDC_JWT_SECRET
             - name: UDC_POSTGRESS_DB
               valueFrom:
